--- a/cardiac/Cardiac/Base.lproj/Main.storyboard
+++ b/cardiac/Cardiac/Base.lproj/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="hjv-9U-fFC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="hjv-9U-fFC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -39,6 +38,14 @@
                                     <segue destination="O3h-YL-h6Q" kind="show" id="q7S-zw-T7O"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7CX-Wa-zsu">
+                                <rect key="frame" x="155" y="449" width="75" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="FingerCam"/>
+                                <connections>
+                                    <segue destination="RsP-mQ-PUk" kind="show" id="R4j-w2-CZg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -48,10 +55,39 @@
                             <constraint firstItem="R40-fJ-ibW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="230" id="kVt-No-CMQ"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="jXh-ht-eYM"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="129" y="442"/>
+            <point key="canvasLocation" x="468" y="441.22938530734638"/>
+        </scene>
+        <!--Pulse Oximeter View Controller-->
+        <scene sceneID="6ab-U5-zcv">
+            <objects>
+                <viewController id="RsP-mQ-PUk" customClass="PulseOximeterViewController" customModule="Cardiac" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FqS-bz-SiS"/>
+                        <viewControllerLayoutGuide type="bottom" id="cYb-Lb-RHq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xAM-ZO-hUu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k9p-3v-KVM">
+                                <rect key="frame" x="111" y="453" width="37" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Flash"/>
+                                <connections>
+                                    <action selector="toggleFlasg:" destination="RsP-mQ-PUk" eventType="touchUpInside" id="pKy-k3-X75"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ONI-Ia-8Xq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="510" y="1296"/>
         </scene>
         <!--FaceCamPin-->
         <scene sceneID="47i-nG-Egh">
@@ -949,7 +985,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1148" y="884"/>
+            <point key="canvasLocation" x="1487.2" y="883.3583208395803"/>
         </scene>
         <!--BodyCamDataCollection-->
         <scene sceneID="DYf-S3-Xk3">
@@ -1083,7 +1119,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6KB-Pw-O65" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1839" y="442"/>
+            <point key="canvasLocation" x="2176.8000000000002" y="441.22938530734638"/>
         </scene>
         <!--bodyCamSubmitRound-->
         <scene sceneID="mU8-wA-ZaL">
@@ -1409,6 +1445,7 @@
                             <constraint firstAttribute="bottom" secondItem="0Wh-k8-83Y" secondAttribute="bottom" constant="20" symbolic="YES" id="zxD-p6-3rp"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Uvz-W7-SHZ"/>
                     <connections>
                         <outlet property="connectionsLabel" destination="zBx-n6-u8p" id="h6n-fM-JPT"/>
                         <outlet property="phoneModeLabel" destination="H4D-xr-CjH" id="3at-FY-DUO"/>
@@ -1416,7 +1453,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yqq-be-YOw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="33" y="-702"/>
+            <point key="canvasLocation" x="-311" y="-367"/>
         </scene>
     </scenes>
     <resources>
